# model_benchmarking

./: .env.example  .gitignore  PROGRESS.md  pyproject.toml
apps/admin/: app.py
apps/user/: app.py
common/: __init__.py  config.py  db.py  identity.py  keys.py  leaderboard.py  repo.py
daemon/: __init__.py  discovery.py  dispatcher.py  drift_runner.py  http_app.py  orchestrator.py  resolver.py  scheduler.py  teams.py  teams_consumer.py  web_discovery.py  worker.py
db/: alembic.ini
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py  0002_benchmark_is_drift.py  0003_teams_inbox_attempts.py  0004_candidate_source_admin.py  0005_web_discovery.py  0006_daemon_status.py
harness/: __init__.py  aggregate.py  candidate_caller.py  drift.py  litellm_caller.py  scorers.py  types.py  usecase.py
mcp_server/: __init__.py  discovery_server.py  server.py
spike/: echo_server.py  mcp-config.json
tests/: test_aggregate.py  test_consumer.py  test_discovery.py  test_dispatcher.py  test_drift.py  test_leaderboard.py  test_litellm_retry.py  test_resolver.py  test_scorers.py  test_teams_cards.py  test_usecase.py  test_web_discovery.py  test_worker.py
tests/fixtures/: openrouter_sample.json
usecases/fixture_qa/: fixture_qa.md  golden.jsonl
